fixed z-index

--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -25,7 +25,6 @@
 .full-size {
     left:0px !important;
     width: 100% !important;
-    z-index: 1000 !important;
 }
 .pull-right {
     float: right;
@@ -34,12 +33,12 @@
     width: 28px;
     cursor: pointer;
 }
-.mat-grid-list .mat-grid-tile:first-child {
-    z-index: 3;
-}
-.mat-grid-list .mat-grid-tile {
-    z-index: 2;
-}
-.mat-grid-list .mat-grid-tile:last-child {
-    z-index: 1;
-}
+/*.mat-grid-list .mat-grid-tile:first-child {*/
+    /*z-index: 3;*/
+/*}*/
+/*.mat-grid-list .mat-grid-tile {*/
+    /*z-index: 2;*/
+/*}*/
+/*.mat-grid-list .mat-grid-tile:last-child {*/
+    /*z-index: 1;*/
+/*}*/
